# OGP-Creator

./: .env.example  .gitignore  README.ja.md  README.md  main.py  pyproject.toml
ogp_creator/: db.py  env.py  models.py  routers.py  schemas.py  utils.py
statics/: index.css  index.js  ogp.css
templates/: error.html  index.html  ogp.html
