[project]
name = "ogp-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.2",
]
